# llamaindex-agentic-runner

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agent-ui/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
agent-ui/src/: App.tsx  index.css
agent-ui/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  HITLPrompt.tsx  MessageBubble.tsx  MessageList.tsx
agent-ui/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
agent-ui/src/hooks/: useChat.ts
agent-ui/src/services/: api.ts
agent-ui/src/store/: chatSlice.ts  index.ts
agent-ui/src/types/: index.ts
agent/agents/: __init__.py  base.py  critic_agent.py  market_agent.py  math_agent.py  research_agent.py  writer_agent.py
agent/api/dto/: __init__.py  agent_dto.py  flow_dto.py  team_dto.py
agent/api/v1/: __init__.py  agent_controller.py  flow_controller.py  team_controller.py
agent/config/: __init__.py  custom_llms.py  database.py  llm_factory.py  observability.py  settings.py
agent/flows/: __init__.py  base.py  story_critic_flow.py  story_flow.py
agent/teams/: __init__.py  base.py  market_research_team.py  research_math_orchestrator_team.py
agent/tests/: conftest.py
agent/tests/api/: test_agent_api.py
agent/tests/unit/: test_agents.py  test_llm_factory.py  test_tools.py
agent/tools/: __init__.py  market_tools.py  math_tools.py  research_tools.py
agent/visualizer/: __init__.py  workflow_server.py
docs/arch/: agentic_patterns.md  architecture.md  observability.md
docs/design-patterns/: README.md  adapter_pattern.md  bridge_pattern.md  chain_of_responsibility_pattern.md  command_pattern.md  composite_pattern.md  decorator_pattern.md  facade_pattern.md  factory_pattern.md  flyweight_pattern.md  iterator_pattern.md  mediator_pattern.md  memento_pattern.md  observer_pattern.md  singleton_pattern.md  state_pattern.md  strategy_pattern.md  template_method_pattern.md
docs/services/: backend_api.md  deployment.md  development.md  testing.md  ui.md
