[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LlamaIndex Core
    "llama-index-core>=0.14.10",
    # LLM Providers
    "llama-index-llms-openai>=0.6.10",
    "llama-index-llms-anthropic>=0.8.6",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-llms-bedrock>=0.4.2",
    "llama-index-llms-cohere>=0.6.1",
    # Custom LLM dependencies
    "google-genai>=1.54.0",  # For GeminiVertexLLM
    "boto3>=1.35.0",  # For BedrockGatewayLLM
    # Framework
    "pydantic-settings>=2.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "api*", "config*", "tools*", "agent_workflows*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
]
